--- a/templates/index.html
+++ b/templates/index.html
@@ -27,20 +27,22 @@
         src="{{ url_for('static', filename='css/images/homepage_image.jpg') }}"
       />
       <div class="small-image-text center-align">
-        <h3>Publish your own recipes to the community</h3>
+        <h3>Sign up to publish your own recipes to the community</h3>
       </div></a
     >
   </div>
 
   <!-- Top right Image Box - bottom -->
   <div class="col m4 s6 homepage-sml-img" id="bottom-right-image">
-    <img
-      class="responsive-img"
-      src="{{ url_for('static', filename='css/images/meatbox.png') }}"
-    />
-    <div class="small-image-text center-align">
-      <h3>Order fresh meat delivered to your door</h3>
-    </div>
+    <a href="https://meatboxlondon.co.uk/" target="_blank">
+      <img
+        class="responsive-img"
+        src="{{ url_for('static', filename='css/images/meatbox.png') }}"
+      />
+      <div class="small-image-text center-align">
+        <h3>Order fresh meat delivered to your door</h3>
+      </div>
+    </a>
   </div>
 </div>
 
@@ -82,40 +84,46 @@
 <!-- Recipe of the Month -->
 
 <div class="row recipe-of-month valign-wrapper">
-  <div class="col s12 m6 main-image">
+  <div class="col s12">
+   <div class="col m6 s12">
     <img
       class="responsive-img recipe-of-month-image"
       src="{{ url_for('static', filename='css/images/pancakes.jpg') }}"
     />
-  </div>
-
-  <div class="col s12 m6">
+    </div>
+    <div class="col m6 s12">
     <h2>Recipe of the Month</h2>
     <h3>Recipe name</h3>
     <h4>Ingredients</h4>
-    <p>•140g self-raising flower<br>
-•	Shake of salt<br>
-•	2 tbsp caster sugar<br>
-•	125m milk<br>
-•	1 large egg<br>
-•	1 tbsp Olive oil<br>
-•	Maple Syrup<br>
-•	Bacon<br>
-</p>
+    <p>
+      •140g self-raising flower<br />
+      • Shake of salt<br />
+      • 2 tbsp caster sugar<br />
+      • 125m milk<br />
+      • 1 large egg<br />
+      • 1 tbsp Olive oil<br />
+      • Maple Syrup<br />
+      • Bacon<br />
+    </p>
     <h4>Method</h4>
-    <p>First cook your crispy bacon…<br>
-1.	Lay bacon on a cold oven proof tray and put it in a cold oven<br>
-2.	Turn the oven on to 200’c and set the time for 20mins<br>
-3.	It may be done slightly before, when it is, remove the oven and put the bacon on some kitchen roll to soak up any liquid<br>
-4.	Whilst the bacon is cooking, mix together the flour, salt, sugar. If you can be bothered, sieve it, it will taste a bit better but not much<br>
-5.	Lightly beat the egg, add the milk and oil and mix<br>
-6.	Mix the two mixtures together. They should form a nice batter with a little beating and mixing. It will be quite a thick mixture<br>
-7.	When the Bacon is done, heat a frying pan to a medium heat<br>
-8.	Add some mixture, it will be thick, that’s fine<br>
-9.	Lay a piece of bacon on top<br>
-10.	When the batter starts to bubble, flip it over<br>
-11.	When both sides are browned lightly, its ready to eat!<br>
-</p>
+    <p>
+      First cook your crispy bacon…<br />
+      1. Lay bacon on a cold oven proof tray and put it in a cold oven<br />
+      2. Turn the oven on to 200’c and set the time for 20mins<br />
+      3. It may be done slightly before, when it is, remove the oven and put the
+      bacon on some kitchen roll to soak up any liquid<br />
+      4. Whilst the bacon is cooking, mix together the flour, salt, sugar. If
+      you can be bothered, sieve it, it will taste a bit better but not much<br />
+      5. Lightly beat the egg, add the milk and oil and mix<br />
+      6. Mix the two mixtures together. They should form a nice batter with a
+      little beating and mixing. It will be quite a thick mixture<br />
+      7. When the Bacon is done, heat a frying pan to a medium heat<br />
+      8. Add some mixture, it will be thick, that’s fine<br />
+      9. Lay a piece of bacon on top<br />
+      10. When the batter starts to bubble, flip it over<br />
+      11. When both sides are browned lightly, its ready to eat!<br />
+    </p>
+    </div>
   </div>
 </div>
 
