--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 </div>
-<ul class="collapsible">
+<ul class="collapsible recipe-list">
   {% for recipe in recipes %}
   <li>
     <div class="row recipes collapsible-header white-text red lighten-3">
