added upload form button. JQuery scrips for Cloudinary to be fixed

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -83,11 +83,12 @@
       <div class="input-field col s12">
         <form action="/action_page.php">
           <label for="myfile">Select your image:</label><br/><br/>
-          <input type="file" id="myfile" name="myfile"/><br/><br/>
-          <input type="Upload image"/>
+          <input type="file" id="file" name="file"/><br/><br/>
+          <input type="submit">
         </form>
       </div>
     </div>
+
 
     <!-- Submit Recipe Button -->
     <div class="row">
