--- a/templates/base.html
+++ b/templates/base.html
@@ -182,6 +182,11 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="jquery.min.js" type="text/javascript"></script>
+    <script src="jquery.ui.widget.js" type="text/javascript"></script>
+    <script src="jquery.iframe-transport.js" type="text/javascript"></script>
+    <script src="jquery.fileupload.js" type="text/javascript"></script>
+    <script src="jquery.cloudinary.js" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% block scripts %} {% endblock %}
   </body>
