update some styling to mobile view of homepage

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,12 +196,10 @@ footer {
     margin-top: 30px;
     margin-bottom: 0px;
 }
-#main-image-text{
-    margin-bottom: 
-}
 #main-image-text h1 {
-    font-size: 2.8rem;
+    font-size: 2.3rem;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 #main-image-text h2 {
@@ -210,7 +208,7 @@ footer {
 }
 
 .small-image-text h3 {
-font-size: 1.1rem;
+font-size: 1rem;
 
 }
 
