--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -83,7 +83,7 @@
       <div class="input-field col s12">
         <form action="/action_page.php">
           <label for="myfile">Select your image:</label><br/><br/>
-          <input type="file" id="file" name="file"/><br/><br/>
+          <input type="file" class="cloudinary-fileupload" id="file" name="file data-cloudinary-field"/><br/><br/>
           <input type="submit">
         </form>
       </div>
