--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         src="{{ url_for('static', filename='css/images/homepage_image.jpg') }}"
       />
       <div class="small-image-text center-align">
-        <h3>Sign up to publish your own recipes to the community</h3>
+        <h3>Sign up and publish your own recipes</h3>
       </div></a
     >
   </div>
@@ -40,7 +40,7 @@
         src="{{ url_for('static', filename='css/images/meatbox.png') }}"
       />
       <div class="small-image-text center-align">
-        <h3>Order fresh meat delivered to your door</h3>
+        <h3>Fresh meat delivered to your door</h3>
       </div>
     </a>
   </div>
@@ -64,13 +64,13 @@
   </div>
 
   <div class="col m6 s12" id="about-fresh-meat">
-    <h2>Fresh Meat Delivered To You</h2>
+    <h2>Order Fresh Meat</h2>
     <p flow-text>
       Looking for some high quality, fresh meat for your recipes?<br />
       Look no further than MeatBox.<br /><br />
-      Simply add the items you wish to your box
-      <br />
-      and place your order for delivery.
+      Simply add the items you wish to your box and place your order for delivery.<br />
+      Click below to visit Meatbox.
+
     </p>
     <a
       href="https://meatboxlondon.co.uk/"
