--- a/static/css/style.css
+++ b/static/css/style.css
@@ -180,10 +180,16 @@ footer {
   margin-top: 100px;
 }
 
-/* Recipe Page */
+/* Find A Recipe Page */
 
 .recipes h5 {
   color: white;
+}
+
+/* View Recipe Page */
+
+#recipe-by {
+    padding: 20px 0px;
 }
 
 /* Edit Page */
