--- a/templates/base.html
+++ b/templates/base.html
@@ -182,22 +182,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
-    
-    <script src="node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
-    <script src="node_modules/blueimp-file-upload/js/vendor/jquery.ui.widget.js" type="text/javascript"></script>
-    <script src="node_modules/blueimp-file-upload/js/jquery.iframe-transport.js" type="text/javascript"></script>
-    <script src="node_modules/blueimp-file-upload/js/jquery.fileupload.js" type="text/javascript"></script>
-    <script src="node_modules/cloudinary-jquery-file-upload/cloudinary-jquery-file-upload.js" type="text/javascript"></script>
-
-
-<!-- 
-    <script src="jquery.min.js" type="text/javascript"></script>
-    <script src="jquery.ui.widget.js" type="text/javascript"></script>
-    <script src="jquery.iframe-transport.js" type="text/javascript"></script>
-    <script src="jquery.fileupload.js" type="text/javascript"></script>
-    <script src="jquery.cloudinary.js" type="text/javascript"></script>-->
-
+    <script src="https://platform-api.sharethis.com/js/sharethis.js#property=5f68bb81a86c6e0012411206&product=inline-share-buttons" type="text/javascript" async="async"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% block scripts %} {% endblock %}
   </body>
