--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -33,7 +33,7 @@
     <div class="card-panel">
       <img
         class="responsive-img"
-        src="https://www.kitchensanctuary.com/wp-content/uploads/2016/06/Crispy-Chicken-Wings-with-Sticky-Asian-Glaze-tall-FS.webp"
+        src="{{ recipe.image_url }}"
       />
     </div>
   </div>
