Removed modal from base and back into Edit_recipe. Now working

--- a/templates/base.html
+++ b/templates/base.html
@@ -128,13 +128,12 @@
       </div>
       {% endfor %} {% endif %} {% endwith %}
     </section>
-      
+
     <main class="container">
       {% block content %} {% endblock %}
     </main>
 
-
-
+    <!-- Footer -->
     <footer class="page-footer">
       <div class="container">
         <div class="row">
