--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -28,9 +28,7 @@
           class="waves-effect waves-light btn red lighten-2"
           >Edit Recipe</a
         >
-        <a
-          href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-          class="waves-effect waves-light btn red lighten-1"
+        <a href="#" class="col s4 btn-large red lighten-1"
           >Delete Recipe</a
         >
         {% endif %}
