--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -98,32 +98,32 @@
           >Cancel</a
         >
         <!-- Delete Recipe Button -->
-        <a href="#modal1" class="col s4 btn-large red lighten-1 modal-trigger"
+        <a href="#delete-modal" class="col s4 btn-large red lighten-1 modal-trigger"
           >Delete Recipe</a
         >
+      </div>
+    </div>
+
+    <!-- Modal Structure -->
+    <div id="delete-modal" class="modal">
+      <div class="modal-content-container">
+        <div class="modal-content">
+          <h4>Are you sure you want to delete?</h4>
+          <p>
+            If you delete your recipe, this can not be undone.
+          </p>
+        </div>
+        <div class="modal-footer">
+          <a
+            href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
+            class="modal-close btn-large red lighten-1"
+            >Delete Recipe</a
+          >
+          <a class="modal-close btn-large red lighten-2">Cancel</a>
+        </div>
       </div>
     </div>
   </form>
 </div>
 
-<!-- Modal Structure -->
-      <div id="modal1" class="modal">
-        <div class="modal-content-container">
-          <div class="modal-content">
-            <h4>Are you sure you want to delete?</h4>
-            <p>
-              If you delete your recipe, this can not be undone.
-            </p>
-          </div>
-          <div class="modal-footer">
-            <a
-              href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-              class="modal-close btn-large red lighten-1"
-              >Delete Recipe</a
-            >
-            <a class="modal-close btn-large red lighten-2">Cancel</a>
-          </div>
-        </div>
-      </div>
-      
 {% endblock %}
