--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -10,13 +10,19 @@
 <ul class="collapsible recipe-list">
   {% for recipe in recipes %}
   <li>
-    <div class="row recipes collapsible-header white-text red lighten-3">
-      <div class="col s7">
+      <div class="row recipes collapsible-header white-text red lighten-3">
+  <div class="col m3">
+      <img
+        class="responsive-img"
+        src="{{ recipe.image_url }}"
+      />
+  </div>
+      <div class="col m7">
         <h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5>
         {{ recipe.category }}
         <p><em>by: {{ recipe.created_by }}</em></p>
       </div>
-      <div class="col s6 recipe-buttons left-align">
+      <div class="col m2 recipe-buttons left-align">
         <a
           href="{{ url_for('view_recipe', recipe_id=recipe._id) }}"
           class="waves-effect waves-light btn view-btn red lighten-5"
@@ -28,17 +34,42 @@
           class="waves-effect waves-light btn red lighten-2"
           >Edit Recipe</a
         >
-        <a href="#" class="col s4 btn-large red lighten-1"
+        <!-- Delete Recipe Button -->
+        <a
+          href="#recipe-delete-modal"
+          class="waves-effect waves-light btn red lighten-1 modal-trigger"
           >Delete Recipe</a
         >
         {% endif %}
       </div>
     </div>
 
+    <!-- Delete Recipe Button -->
     <div class="col s9"></div>
     <div class="collapsible-body"><span>{{ recipe.recipe_method }}</span></div>
   </li>
+
+  <!-- Modal Structure -->
+  <div id="recipe-delete-modal" class="modal">
+    <div class="modal-content-container">
+      <div class="modal-content">
+        <h4>Are you sure you want to delete?</h4>
+        <p>
+          If you delete your recipe, this can not be undone.
+        </p>
+      </div>
+      <div class="modal-footer">
+        <a
+          href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
+          class="modal-close btn-large red lighten-1"
+          >Delete Recipe</a
+        >
+        <a class="modal-close btn-large red lighten-2">Cancel</a>
+      </div>
+    </div>
+  </div>
+
   {% endfor %}
 </ul>
-  
+
 {% endblock %}
