--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,69 +7,81 @@
     </div>
   </div>
 </div>
-<ul class="collapsible recipe-list">
-  {% for recipe in recipes %}
-  <li>
+
+<!-- Collapsible -->
+<div class="container">
+  <ul class="collapsible recipe-list">
+    {% for recipe in recipes %}
+    <li>
       <div class="row recipes collapsible-header white-text red lighten-3">
-  <div class="col m3">
-      <img
-        class="responsive-img"
-        src="{{ recipe.image_url }}"
-      />
-  </div>
-      <div class="col m7">
-        <h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5>
-        {{ recipe.category }}
-        <p><em>by: {{ recipe.created_by }}</em></p>
+        
+        <div class="col s12 m3">
+          <img class="responsive-img" src="{{ recipe.image_url }}" />
+        </div>
+
+        <div class="col s12 m7">
+          <h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5>
+          {{ recipe.category }}
+          <p><em>by: {{ recipe.created_by }}</em></p>
+        </div>
+
+        <div class="col s12 m2 recipe-buttons left-align">
+          <a
+            href="{{ url_for('view_recipe', recipe_id=recipe._id) }}"
+            class="waves-effect waves-light btn view-btn red lighten-5"
+            >View Recipe</a
+          >
+          {% if session.user|lower == recipe.created_by|lower %}
+          <a
+            href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
+            class="waves-effect waves-light btn red lighten-2"
+            >Edit Recipe</a
+          >
+          <!-- Delete Recipe Button -->
+          <a
+            href="#recipe-delete-modal"
+            class="waves-effect waves-light btn red lighten-1 modal-trigger"
+            >Delete Recipe</a
+          >
+          {% endif %}
+        </div>
       </div>
-      <div class="col m2 recipe-buttons left-align">
-        <a
-          href="{{ url_for('view_recipe', recipe_id=recipe._id) }}"
-          class="waves-effect waves-light btn view-btn red lighten-5"
-          >View Recipe</a
-        >
-        {% if session.user|lower == recipe.created_by|lower %}
-        <a
-          href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-          class="waves-effect waves-light btn red lighten-2"
-          >Edit Recipe</a
-        >
-        <!-- Delete Recipe Button -->
-        <a
-          href="#recipe-delete-modal"
-          class="waves-effect waves-light btn red lighten-1 modal-trigger"
-          >Delete Recipe</a
-        >
-        {% endif %}
+
+      <!-- Expandable Content -->
+      <div class="col s9"></div>
+      <div class="collapsible-body">
+        <span><h2>Ingredients</h2>
+      {% for ingredient in recipe.recipe_ingredients.splitlines() %}
+      <p>{{ ingredient }}</p>
+      {% endfor %}
+      <h2>Method</h2>
+      {% for method in recipe.recipe_method.splitlines() %}
+      <p>{{ method }}</p>
+      {% endfor %}</span>
+      </div>
+    </li>
+
+    <!-- Modal Structure -->
+    <div id="recipe-delete-modal" class="modal">
+      <div class="modal-content-container">
+        <div class="modal-content">
+          <h4>Are you sure you want to delete?</h4>
+          <p>
+            If you delete your recipe, this can not be undone.
+          </p>
+        </div>
+        <div class="modal-footer">
+          <a
+            href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
+            class="modal-close btn-large red lighten-1"
+            >Delete Recipe</a
+          >
+          <a class="modal-close btn-large red lighten-2">Cancel</a>
+        </div>
       </div>
     </div>
 
-    <!-- Delete Recipe Button -->
-    <div class="col s9"></div>
-    <div class="collapsible-body"><span>{{ recipe.recipe_method }}</span></div>
-  </li>
-
-  <!-- Modal Structure -->
-  <div id="recipe-delete-modal" class="modal">
-    <div class="modal-content-container">
-      <div class="modal-content">
-        <h4>Are you sure you want to delete?</h4>
-        <p>
-          If you delete your recipe, this can not be undone.
-        </p>
-      </div>
-      <div class="modal-footer">
-        <a
-          href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-          class="modal-close btn-large red lighten-1"
-          >Delete Recipe</a
-        >
-        <a class="modal-close btn-large red lighten-2">Cancel</a>
-      </div>
-    </div>
-  </div>
-
-  {% endfor %}
-</ul>
-
+    {% endfor %}
+  </ul>
+</div>
 {% endblock %}
