--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -95,7 +95,9 @@
         >
       </div>
     </div>
-
+    <div>
+      <input id="date_added" name="date_added" />
+    </div>
     <!-- Submit Recipe Button -->
     <div class="row">
       <div class="col s12 center-align">
