--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -21,7 +21,7 @@
       {% endfor %}
       <div id="recipe-by">
         <h3>Recipe posted by: {{ recipe.created_by }}</h3>
-        <h4>Recipe posted on: {{ recipe.date_time }}</h4>
+        <p>Recipe posted on: {{ recipe.date_added }}</p>
         <!-- Share Buttons, from sharethis.com -->
         <h4>Share this recipe</h4>
         <div class="sharethis-inline-share-buttons"></div>
