--- a/templates/index.html
+++ b/templates/index.html
@@ -47,30 +47,32 @@
 </div>
 
 <!-- About Row -->
-<div class="row center-align" id="about-section">
-  <div class="col m6 s12" id="about">
-    <h2>About Meatblog</h2>
-    <p flow-text>
-      Meatblog is a Meat based recipe website providing tasty meaty recipes.<br />
-      Recipes have been submitted by our community of cooking enthusiasts.<br /><br />
-      Do you have a tasty recipe you want to share with others?<br />
-      Click the button below.
-    </p>
-    <a
-      href="{{ url_for('sign_in') }}"
-      class="waves-effect waves-light btn red lighten-2 about-btn"
-      >Sign In</a
-    >
-  </div>
+<section>
+<div class="row center-align" id="about-row">
+    <div class="about-section col m6 s12" id="about">
+      <h2>About Meatblog</h2>
+      <p flow-text>
+        Meatblog is a Meat based recipe website providing tasty meaty
+        recipes.<br />
+        Recipes have been submitted by our community of cooking enthusiasts.<br /><br />
+        Do you have a tasty recipe you want to share with others?<br />
+        Click the button below.
+      </p>
+      <a
+        href="{{ url_for('sign_in') }}"
+        class="waves-effect waves-light btn red lighten-2 about-btn"
+        >Sign In</a
+      >
+    </div>
 
-  <div class="col m6 s12" id="about-fresh-meat">
+  <div class="about-section col m6 s12" id="about-fresh-meat">
     <h2>Order Fresh Meat</h2>
     <p flow-text>
       Looking for some high quality, fresh meat for your recipes?<br />
       Look no further than MeatBox.<br /><br />
-      Simply add the items you wish to your box and place your order for delivery.<br />
+      Simply add the items you wish to your box and place your order for
+      delivery.<br />
       Click below to visit Meatbox.
-
     </p>
     <a
       href="https://meatboxlondon.co.uk/"
@@ -80,49 +82,50 @@
     >
   </div>
 </div>
-
+</section>
 <!-- Recipe of the Month -->
 
 <div class="row recipe-of-month valign-wrapper">
   <div class="col s12">
-   <div class="col m6 s12">
-    <img
-      class="responsive-img recipe-of-month-image"
-      src="{{ url_for('static', filename='css/images/pancakes.jpg') }}"
-    />
+    <div class="col m6 s12">
+      <img
+        class="responsive-img recipe-of-month-image"
+        src="{{ url_for('static', filename='css/images/pancakes.jpg') }}"
+      />
     </div>
     <div class="col m6 s12">
-    <h2>Recipe of the Month</h2>
-    <h3>Recipe name</h3>
-    <h4>Ingredients</h4>
-    <p>
-      •140g self-raising flower<br />
-      • Shake of salt<br />
-      • 2 tbsp caster sugar<br />
-      • 125m milk<br />
-      • 1 large egg<br />
-      • 1 tbsp Olive oil<br />
-      • Maple Syrup<br />
-      • Bacon<br />
-    </p>
-    <h4>Method</h4>
-    <p>
-      First cook your crispy bacon…<br />
-      1. Lay bacon on a cold oven proof tray and put it in a cold oven<br />
-      2. Turn the oven on to 200’c and set the time for 20mins<br />
-      3. It may be done slightly before, when it is, remove the oven and put the
-      bacon on some kitchen roll to soak up any liquid<br />
-      4. Whilst the bacon is cooking, mix together the flour, salt, sugar. If
-      you can be bothered, sieve it, it will taste a bit better but not much<br />
-      5. Lightly beat the egg, add the milk and oil and mix<br />
-      6. Mix the two mixtures together. They should form a nice batter with a
-      little beating and mixing. It will be quite a thick mixture<br />
-      7. When the Bacon is done, heat a frying pan to a medium heat<br />
-      8. Add some mixture, it will be thick, that’s fine<br />
-      9. Lay a piece of bacon on top<br />
-      10. When the batter starts to bubble, flip it over<br />
-      11. When both sides are browned lightly, its ready to eat!<br />
-    </p>
+      <h2>Recipe of the Month</h2>
+      <h3>Recipe name</h3>
+      <h4>Ingredients</h4>
+      <p>
+        •140g self-raising flower<br />
+        • Shake of salt<br />
+        • 2 tbsp caster sugar<br />
+        • 125m milk<br />
+        • 1 large egg<br />
+        • 1 tbsp Olive oil<br />
+        • Maple Syrup<br />
+        • Bacon<br />
+      </p>
+      <h4>Method</h4>
+      <p>
+        First cook your crispy bacon…<br />
+        1. Lay bacon on a cold oven proof tray and put it in a cold oven<br />
+        2. Turn the oven on to 200’c and set the time for 20mins<br />
+        3. It may be done slightly before, when it is, remove the oven and put
+        the bacon on some kitchen roll to soak up any liquid<br />
+        4. Whilst the bacon is cooking, mix together the flour, salt, sugar. If
+        you can be bothered, sieve it, it will taste a bit better but not
+        much<br />
+        5. Lightly beat the egg, add the milk and oil and mix<br />
+        6. Mix the two mixtures together. They should form a nice batter with a
+        little beating and mixing. It will be quite a thick mixture<br />
+        7. When the Bacon is done, heat a frying pan to a medium heat<br />
+        8. Add some mixture, it will be thick, that’s fine<br />
+        9. Lay a piece of bacon on top<br />
+        10. When the batter starts to bubble, flip it over<br />
+        11. When both sides are browned lightly, its ready to eat!<br />
+      </p>
     </div>
   </div>
 </div>
