--- a/templates/index.html
+++ b/templates/index.html
@@ -2,57 +2,54 @@
 
 <!-- Main Homepage Image -->
 <div class="row main-image-row">
-  <div class="col m8 s12 main-image">
-    <img
+	<div class="col m8 s12 main-image">
+		<img
       class="responsive-img"
       src="{{ url_for('static', filename='css/images/homepage_image.jpg') }}"
     />
-    <div id="main-image-text" class="left-align">
-      <h1>Tasty meat based recipes</h1>
-      <h2>Cook, Submit, Share</h2>
-      <a
-        href="{{ url_for('find_recipe') }}"
-        class="waves-effect waves-light btn red lighten-2 header-btn"
-        >Find a Recipe</a
-      >
-    </div>
-  </div>
+		<div id="main-image-text" class="left-align">
+			<h1>Tasty meat based recipes</h1>
+			<h2>Cook, Submit, Share</h2>
+			<a href="{{ url_for('find_recipe') }}" class="waves-effect waves-light btn red lighten-2 header-btn">Find a
+				Recipe</a>
+		</div>
+	</div>
 
-  <!-- Top right Image Box - top -->
+	<!-- Top right Image Box - top -->
 
-  <div class="col m4 s6 homepage-sml-img">
-    <a href="{{ url_for('sign_up') }}"
-      ><img
+	<div class="col m4 s6 homepage-sml-img">
+		<a href="{{ url_for('sign_up') }}"><img
         class="responsive-img"
         src="{{ url_for('static', filename='css/images/homepage_image.jpg') }}"
       />
-      <div class="small-image-text center-align">
-        <h3>Sign up and publish your own recipes</h3>
-      </div></a
-    >
-  </div>
+			<div class="small-image-text center-align">
+				<h3>Sign up and publish your own recipes</h3>
+			</div>
+		</a>
+	</div>
 
-  <!-- Top right Image Box - bottom -->
-  <div class="col m4 s6 homepage-sml-img" id="bottom-right-image">
-    <a href="https://meatboxlondon.co.uk/" target="_blank">
-      <img
+	<!-- Top right Image Box - bottom -->
+	<div class="col m4 s6 homepage-sml-img" id="bottom-right-image">
+		<a href="https://meatboxlondon.co.uk/" target="_blank">
+			<img
         class="responsive-img"
         src="{{ url_for('static', filename='css/images/meatbox.png') }}"
       />
-      <div class="small-image-text center-align">
-        <h3>Fresh meat delivered to your door</h3>
-      </div>
-    </a>
-  </div>
+			<div class="small-image-text center-align">
+				<h3>Fresh meat delivered to your door</h3>
+			</div>
+		</a>
+	</div>
 </div>
 
-<!-- About Row -->
-<section>
-<div class="row center-align" id="about-row">
-    <div class="about-section col m6 s12" id="about">
-      <h2>About Meatblog</h2>
-      <p flow-text>
-        Meatblog is a Meat based recipe website providing tasty meaty
+<!-- About Section -->
+<div class="about-container">
+	<div class="row about-row center-align">
+
+		<div class="col s12 m6 grey lighten-2 about-col center-block">
+			<h2>About Meatblog</h2>
+			<p flow-text>
+Meatblog is a Meat based recipe website providing tasty meaty
         recipes.<br />
         Recipes have been submitted by our community of cooking enthusiasts.<br /><br />
         Do you have a tasty recipe you want to share with others?<br />
@@ -60,45 +57,46 @@
       </p>
       <a
         href="{{ url_for('sign_in') }}"
-        class="waves-effect waves-light btn red lighten-2 about-btn"
+        class="waves-effect waves-light btn red lighten-2 about-btn center-block"
         >Sign In</a
       >
-    </div>
+		</div>
 
-  <div class="about-section col m6 s12" id="about-fresh-meat">
-    <h2>Order Fresh Meat</h2>
-    <p flow-text>
-      Looking for some high quality, fresh meat for your recipes?<br />
-      Look no further than MeatBox.<br /><br />
-      Simply add the items you wish to your box and place your order for
-      delivery.<br />
-      Click below to visit Meatbox.
-    </p>
-    <a
-      href="https://meatboxlondon.co.uk/"
-      target="_blank"
-      class="waves-effect waves-light btn red lighten-2 about-btn"
-      >Visit Meatbox</a
-    >
-  </div>
+		<div class="col s12 m6 grey lighten-1 about-meatbox-col">
+			<h2>Order Fresh Meat</h2>
+			<p flow-text>
+				Looking for some high quality, fresh meat for your recipes?<br />
+        Look no further than MeatBox.<br /><br />
+        Simply add the items you wish to your box and place your order for
+        delivery.<br />
+        Click below to visit Meatbox.
+      </p>
+      <a href="https://meatboxlondon.co.uk/" target="_blank"
+                        class="waves-effect waves-light btn red lighten-2 about-btn">Visit Meatbox</a>
+		</div>
+
+	</div>
 </div>
-</section>
+</div>
+</div>
+
+
 <!-- Recipe of the Month -->
 
 <div class="row recipe-of-month valign-wrapper">
-  <div class="col s12">
-    <div class="col m6 s12">
-      <img
+	<div class="col s12">
+		<div class="col m6 s12">
+			<img
         class="responsive-img recipe-of-month-image"
         src="{{ url_for('static', filename='css/images/pancakes.jpg') }}"
       />
     </div>
-    <div class="col m6 s12">
-      <h2>Recipe of the Month</h2>
-      <h3>Recipe name</h3>
-      <h4>Ingredients</h4>
-      <p>
-        •140g self-raising flower<br />
+			<div class="col m6 s12">
+				<h2>Recipe of the Month</h2>
+				<h3>Recipe name</h3>
+				<h4>Ingredients</h4>
+				<p>
+					•140g self-raising flower<br />
         • Shake of salt<br />
         • 2 tbsp caster sugar<br />
         • 125m milk<br />
@@ -107,9 +105,9 @@
         • Maple Syrup<br />
         • Bacon<br />
       </p>
-      <h4>Method</h4>
-      <p>
-        First cook your crispy bacon…<br />
+					<h4>Method</h4>
+					<p>
+						First cook your crispy bacon…<br />
         1. Lay bacon on a cold oven proof tray and put it in a cold oven<br />
         2. Turn the oven on to 200’c and set the time for 20mins<br />
         3. It may be done slightly before, when it is, remove the oven and put
@@ -126,22 +124,19 @@
         10. When the batter starts to bubble, flip it over<br />
         11. When both sides are browned lightly, its ready to eat!<br />
       </p>
-    </div>
-  </div>
-</div>
+			</div>
+		</div>
+	</div>
 
-<!-- Submit Your Own Recipe -->
-<div class="col s12 center-align submit-recipe-section">
-  <h1>Submit your own recipe</h1>
-  <p>
-    Do you have a tasty, meat based recipe you would like to share?<br />Create
+	<!-- Submit Your Own Recipe -->
+	<div class="col s12 center-align submit-recipe-section">
+		<h1>Submit your own recipe</h1>
+		<p>
+			Do you have a tasty, meat based recipe you would like to share?<br />Create
     an account quickly and for free and post away!
   </p>
-  <a
-    href="{{ url_for('sign_up') }}"
-    class="waves-effect waves-light btn red lighten-2 about-btn"
-    >Sign up</a
-  >
-</div>
+			<a href="{{ url_for('sign_up') }}" class="waves-effect waves-light btn red lighten-2 about-btn">Sign
+				up</a>
+	</div>
 
-{% endblock %}
+	{% endblock %}
