Linking about button correctly. Now working

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 </div>
 
 <!-- About Section -->
-<div class="about-container">
+<div class="about-container" id="about-section">
 	<div class="row about-row center-align">
 
 		<div class="col s12 m6 grey lighten-2 about-col center-block">
