--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,7 @@ Meatblog is a Meat based recipe website providing tasty meaty
 
 <!-- Recipe of the Month -->
 
+<section class="recipe-month-section">
 <div class="row recipe-of-month valign-wrapper">
 	<div class="col s12">
 		<div class="col m6 s12">
@@ -127,6 +128,7 @@ Meatblog is a Meat based recipe website providing tasty meaty
 			</div>
 		</div>
 	</div>
+</section>
 
 	<!-- Submit Your Own Recipe -->
 	<div class="col s12 center-align submit-recipe-section">
