--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
       {% if session.user %}
       <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
       {% else %}
-      <li><a href="#">About</a></li>
+      <li><a href="{{ url_for('home', _anchor='about-section') }}">About</a></li>
       {% endif %} {% if session.user %}
       <li>
         <a href="https://meatboxlondon.co.uk/" target="_blank">Order Meat</a>
