Removing dupe ids

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,8 +70,7 @@
               <li>
                 <a
                   href="{{ url_for('sign_in') }}"
-                  class="waves-effect waves-light btn red lighten-5"
-                  id="sign-in-btn"
+                  class="sign-in-btn waves-effect waves-light btn red lighten-5"
                   >Sign In</a
                 >
               </li>
@@ -110,8 +109,7 @@
       <li>
         <a
           href="{{ url_for('sign_in') }}"
-          class="waves-effect waves-light btn red lighten-5"
-          id="sign-in-btn"
+          class="sign-in-btn waves-effect waves-light btn red lighten-5"
           >Sign In</a
         >
       </li>
